--- a/docs/thesis/bitcoin.tex
+++ b/docs/thesis/bitcoin.tex
@@ -106,7 +106,7 @@ The P2PKH pushes the signature produced by the private key and the public key to
 
 \subsection{Pay to Script Hash}
 
-The Pay-to-Script-Hash or P2SH is a more flexible transaction than the P2PKH and was introduced with BIP016~\cite{bip:0016:p2sh}. It allows the locking script to only be the hash of the redeemable script. If a long script with many public keys is considered as seen in figure \ref{fig:cumbersome:script}.
+The Pay-to-Script-Hash or P2SH is a more flexible transaction than the P2PKH and was introduced with \gls{bip}016\footnote{Bitcoin Improvement Proposal}~\cite{bip:0016:p2sh}. It allows the locking script to only be the hash of the redeemable script. If a long script with many public keys is considered as seen in figure \ref{fig:cumbersome:script}.
 
 \newpage
 
