price strategy field

--- a/docs/thesis/abstract.tex
+++ b/docs/thesis/abstract.tex
@@ -1,4 +1,6 @@
-\centering \textbf{Abstract}
+\begin{center}
+	\textbf{Abstract}
+\end{center} 
 
 In payment channel networks, such as the Bitcoin native Lightning Network, the routing nodes receives a fee as compensation for displaced liquidity, time value of money and operational costs. Currently this fee is mostly manually set procuring sub optimal profits to the node operator. The network dynamics may be modeled as a graph and each node as an actor utilizing strategies in fee price setting, preferential attachment, timing, allocation and funding akin to Game Theoretic models. Further assuming rational actors and strategy propagation is proportional to population suggest similar methodology to Evolutionary Game Theory where a strategy's fitness will emerge as a fraction of population size. 
 
