--- a/docs/thesis/discussion.tex
+++ b/docs/thesis/discussion.tex
@@ -1,6 +1,10 @@
 \chapter{Discussion \& Conclusions}
 
-Firstly there is two points that needs te be remarked. 1) The topology and efficiency of the Lightning network will form as a product of profitable behavior, bottom up. It will not form from intervention, where a random mesh network is seen as good and the actors aim to fulfill such a model. 2) The behavior regarded in this thesis leads to a sufficiently robust network with short average paths. Strategies that fulfill a valuable niche in the network will be profitable and the emerging real network will probably be more efficient than any man made model could ever be as nodes struggle to provide liquid paths between paying nodes.
+Firstly there is two points that needs te be remarked.
+ 
+1) The topology and efficiency of the \gls{Lightning Network} will form as a product of profitable behavior, bottom up. It will not form from intervention, where a random mesh network is seen as good and the actors aim to fulfill such a model.
+ 
+2) The behavior regarded in this thesis leads to a sufficiently robust network with short average paths. Strategies that fulfill a valuable niche in the network will be profitable and the emerging real network will probably be more efficient than any man made model could ever be as nodes struggle in the most Darwinian sense to provide liquid paths between paying nodes.
 
 \section{Balanced Channels}
 
@@ -66,11 +70,11 @@ It is difficult to say how universal these results are although surely many stra
 
 \subsection{Network theory}
 
-Albert-László Barabási recently remarked that the bottleneck in network theory is mainly data-driven~\cite{barabasi:decade:beyond}. The Lightning network provides accurate network data with clear economic incentives for each actor. This may, in many ways, are unprecedented. There might be worth to study the network, in addition to its ability to scale Bitcoin, for what it suggest for networks in general. Many studies, cited herein, have been done on attachment heuristics in relation to fitness - it has however, been difficult to apply in practice to real networks. The Lightning network may be a better empirical test-bed for models than any preceding network. 
+Albert-László Barabási recently remarked that the bottleneck in network theory is mainly data-driven~\cite{barabasi:decade:beyond}. The \gls{Lightning Network} provides accurate network data with clear economic incentives for each actor. This may, in many ways, are unprecedented. There might be worth to study the network, in addition to its ability to scale Bitcoin, for what it suggest for networks in general. Many studies, cited herein, have been done on attachment heuristics in relation to fitness - it has however, been difficult to apply in practice to real networks. The \gls{Lightning Network} may be a better empirical test-bed for models than any preceding network. 
 
 \subsection{Game Theory}
 
-Much similar to network theory, Game theory have been difficult to use in empirical context. Especially in EGT as nature seldom have clear pay-off matrices. Even very clear examples, such as with the Bacteriophage shown by Turner and Chao~\cite{turner:chao:prisoners:dilemma, nowak:sigmund:phage}, still contains significant noise. Market data on the other hand, especially prices, is available in droves and it is arguable easier to apply game theory to economics. It usually still require effort to retrieve data, e.g. geo-locations of competing businesses. The Lightning network might give us further insight into regional nuances and due to completeness bridge the gap between individual strategy with full market Marshallian dynamics.    
+Much similar to network theory, Game theory have been difficult to use in empirical context. Especially in EGT as nature seldom have clear pay-off matrices. Even very clear examples, such as with the Bacteriophage shown by Turner and Chao~\cite{turner:chao:prisoners:dilemma, nowak:sigmund:phage}, still contains significant noise. Market data on the other hand, especially prices, is available in droves and it is arguable easier to apply game theory to economics. It usually still require effort to retrieve data, e.g. geo-locations of competing businesses. The \gls{Lightning Network} might give us further insight into regional nuances and due to completeness bridge the gap between individual strategy with full market Marshallian dynamics.    
 
 \subsection{Fee complexity}
 
@@ -78,7 +82,7 @@ The optimal fee price for each edge will most likely be to expensive to calculat
 
 \subsection{Empirical gathering}
 
-There is many assumptions in this results
+There is still many assumptions in this the
 
 (genetic algorithm)
 
