--- a/docs/thesis/main.tex
+++ b/docs/thesis/main.tex
@@ -147,11 +147,11 @@
 	  		\vspace{10mm}
 	  		\LARGE{ \mytitle } \\
 	  		\vspace{2mm}
-		
-			\begin{footnotesize}
+		\end{center}
+			\begin{small}
 			\input{abstract}
-			\end{footnotesize}
-	
+			\end{small}
+		\begin{center}
 	  		\vspace{10mm}
 	  		\begin{large}
 	  			\begin{tabular}{ll}
@@ -169,11 +169,11 @@
 	  	\end{center}
     \end{titlepage}
   
-	\begin{footnotesize}
+	\begin{small}
 		\label{sec:acknowledgments}
 		\addcontentsline{toc}{chapter}{Acknowledgement}
 		\input{acknowledgments}
-	\end{footnotesize}
+	\end{small}
 	\clearpage
   
     \vspace{-.4cm}
