--- a/docs/thesis/scaling.tex
+++ b/docs/thesis/scaling.tex
@@ -95,11 +95,11 @@ One proposal involve multiple chains where one could peg bitcoin to an alternate
 
 \section{Off-chain scaling}
 
-Off-chain solutions, like the Lightning Network, utilize the contractual nature of transaction. Schemes of transaction can be implemented such as an obligation in form of a transaction may be held privately without broadcasting it. The obligation may then be changed multiple times without the rest of the network knowing and only in worst case, require to broadcast the transaction. 
+Off-chain solutions, like the \gls{Lightning Network}, utilize the contractual nature of transaction. Schemes of transaction can be implemented such as an obligation in form of a transaction may be held privately without broadcasting it. The obligation may then be changed multiple times without the rest of the network knowing and only in worst case, require to broadcast the transaction. 
 
 Most schemes involve payment channels, where two parties locks in funds between each other and then the balance between them can be updated incessantly without using the blockchain. Multiple channels may be aggregated together into a network. Consider a channel between Alice and Bob and a channel between Bob and Carol. If Alice wish to pay Carol, she may update her channel with Bob if and only if Bob updates his channel with Carol.  
 
-Payment channel networks may be constructed in many different ways, a few distinct proposals has been suggested. Decker and Wattenhofer suggested a scheme with Duplex micropayment channels~\cite{decker:wattenhofer:duplex}. The Lightning Network is further discussed in the following chapter. Recently a new scheme was published, the eltoo protocol, which may be integrated into the Lightning stack~\cite{decker:russell:Osuntokun:eltoo}.   
+Payment channel networks may be constructed in many different ways, a few distinct proposals has been suggested. Decker and Wattenhofer suggested a scheme with Duplex micropayment channels~\cite{decker:wattenhofer:duplex}. The \gls{Lightning Network} is further discussed in the following chapter. Recently a new scheme was published, the eltoo protocol, which may be integrated into the Lightning stack~\cite{decker:russell:Osuntokun:eltoo}.   
 
 \section{Rationale for small blocks}
 
