--- a/docs/thesis/acknowledgments.tex
+++ b/docs/thesis/acknowledgments.tex
@@ -1,6 +1,8 @@
 \vspace*{7cm}
 
-\centering \textbf{Acknowledgements}
+\begin{center}
+	\textbf{Acknowledgements}
+\end{center} 
 
 I would first like to thank Cinnober for giving me this opportunity and specifically my thesis advisor Oskar Janson for his dedication and vast knowledge in Bitcoin, risk and financial markets.
 Further I would also like to thank my university supervisor Dr. Jerry Eriksson for his many suggestions and inducing academic rigor into the thesis. Along with the University Examiner Henrik Bj\"{o}rklund and the many teachers at Umeå University for these last 5 years. 
