--- a/docs/thesis/problem.tex
+++ b/docs/thesis/problem.tex
@@ -28,6 +28,15 @@ This thesis aim to address following three questions:
 		\item When should a channel be re-balanced by finding a circular route?
 		\item Is it beneficial to have a well funded node, and to what extent is capital decisive?
 	\end{enumerate}
+
+	\begin{enumerate}
+		\item How should a \gls{Lightning Network} routing node behave to maximize earnings?
+	
+		\item What network topology will the \gls{Lightning Network} converge towards as routing nodes becomes increasingly efficient?
+		
+		%\item What network topology will the \gls{Lightning Network} converge towards as routing nodes becomes increasingly efficient in terms of degree distribution, robustness and diameter?
+		
+	\end{enumerate}
 	
 \section{Related work}
     \label{sec:related_work}
