--- a/docs/thesis/discussion.tex
+++ b/docs/thesis/discussion.tex
@@ -1,6 +1,6 @@
 \chapter{Discussion \& Conclusions}
 
-Firstly there is two points that needs te be remarked.
+First, there is two points that should be remarked.
  
 1) The topology and efficiency of the \gls{Lightning Network} will form as a product of profitable behavior, bottom up. It will not form from intervention, where a random mesh network is seen as good and the actors aim to fulfill such a model.
  
